[package]
name = "pushrod"
version = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/pushrod/"
documentation = "http://docs.rs/crate/pushrod/"
keywords = ["sdl", "sdl2", "pushrod", "ui", "gui"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = [
    "pushrod-events",
    "pushrod-widgets",
]

[lib]
name = "pushrod"
path = "src/lib.rs"

[dependencies.sdl2]
version = "^0.33"
features = ["ttf", "image", "unsafe_textures"]

[dependencies]
pushrod-events = { version = "^0", path = "pushrod-events" }
